force-app/main/default/objects/Race__c/fields/PollPositionLapTime__c.field-meta.xml
<CustomField>
    <fullName>PollPositionLapTime__c</fullName>
    <description>Select the fastest contestant qualification laptime.</description>
    <label>Poll Position Lap Time</label>
    <summarizedField>Contestant__c.QualificationFastestLapTime__c</summarizedField>
    <summaryForeignKey>Contestant__c.Race__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>