force-app/main/default/objects/Race__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Races</relationshipLabel>
    <relationshipName>Races</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>